Updated <b> tags to <strong> for accessibility

--- a/github.html
+++ b/github.html
@@ -204,15 +204,15 @@
                 <h5 class="subtitle">Ideation</h5>
                 <h2 class="github-title">Creating classification</h2>
                 <p>
-                    The driving statement that pushed forward our ideation was that <b>structure should be complemented with flexibility</b>. In order to accomplish this, we came up with two different types of elements.
+                    The driving statement that pushed forward our ideation was that <strong>structure should be complemented with flexibility</strong>. In order to accomplish this, we came up with two different types of elements.
                 </p>
                 <br><br>
                 <p>
-                    The <b>components classification</b> was given to elements that are smaller and resuable, just like the components being used in high fidelity prototypes – except this time in a lower fidelity. These elements aren’t meant to be changed, but can be hidden/removed. They visually resemble grayscale GitHub UI.
+                    The <strong>components classification</strong> was given to elements that are smaller and resuable, just like the components being used in high fidelity prototypes – except this time in a lower fidelity. These elements aren’t meant to be changed, but can be hidden/removed. They visually resemble grayscale GitHub UI.
                 </p>
                 <img alt="prototyping components" src="work/github/github-mockup-2.png" class="img">
                 <p>
-                    The <b>frames classification</b> was given to elements that are larger and might be components in a high fidelity mockup. However, at the exploration stage, these elements are meant to be changed. They’re detached by default and sometimes have hidden elements for designers to show/hide based on the needed level of fidelity. Frames also might contain some of the components shown above.
+                    The <strong>frames classification</strong> was given to elements that are larger and might be components in a high fidelity mockup. However, at the exploration stage, these elements are meant to be changed. They’re detached by default and sometimes have hidden elements for designers to show/hide based on the needed level of fidelity. Frames also might contain some of the components shown above.
                 </p>
                 <img alt="prototyping frames" src="work/github/github-mockup-3.png" class="img">
             </div>
