--- a/starbucks.html
+++ b/starbucks.html
@@ -167,7 +167,7 @@
                 </p>
                 <br><br>
                 <p>
-                    My user research showed that the drink ordering process on the Starbucks app was fine. Users knew how to navigate the customization of a drink and how their new drink would taste without a hitch. The real problem was that <b>users didn’t trust themselves enough to make a custom drink and be confident that they would like it</b>. It was cost-prohibitive to try a new drink or a customized old drink if it led to a user cringing every time they took a sip. So a couple friends and I went out and got some sticky notes.
+                    My user research showed that the drink ordering process on the Starbucks app was fine. Users knew how to navigate the customization of a drink and how their new drink would taste without a hitch. The real problem was that <strong>users didn’t trust themselves enough to make a custom drink and be confident that they would like it</strong>. It was cost-prohibitive to try a new drink or a customized old drink if it led to a user cringing every time they took a sip. So a couple friends and I went out and got some sticky notes.
                 </p>
             </div>
             
@@ -179,11 +179,11 @@
                 </p>
                 <br><br>
                 <p>
-                    <b>Making Customizations Easier</b>: How might we make it easy for users to share and utilize other user-created custom drinks?
+                    <strong>Making Customizations Easier</strong>: How might we make it easy for users to share and utilize other user-created custom drinks?
                 </p>
                 <br><br>
                 <p>
-                    <b>Making Better Recommendations</b>: How might we help users find drinks that are similar in taste to drinks they already like?
+                    <strong>Making Better Recommendations</strong>: How might we help users find drinks that are similar in taste to drinks they already like?
                 </p>
                 <br><br>
                 <p>
