--- a/travel.html
+++ b/travel.html
@@ -189,6 +189,7 @@
             <div class="scroll">
                 <img alt="Libe Slope, Ithaca, New York" src="work/travel/ithaca1.jpg" class="photo">
                 <img alt="Cornell University, Ithaca, New York" src="work/travel/ithaca2.jpg" class="photo">
+                <img alt="Cornell University, Ithaca, New York" src="work/travel/ithaca3.jpg" class="photo">
             </div>
         </div>
 
