Update GitHub Figma preview

--- a/github.html
+++ b/github.html
@@ -231,9 +231,9 @@
             <p>
                 The prototyping pages were a great experience in learning the workflow and asynchronous communication used within GitHub’s design team. You can check out the file below:
             </p>
-
-            <iframe title="GitHub Prototyping Pages" class="img" style="border: none;" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FbOU0fFoN9dnVUpvEzbTqRP%2Fprototyping-pages%3Fnode-id%3D0%253A1" allowfullscreen></iframe>
-
+            <br/>
+            <iframe style="border: none;" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FRfvQDIm4H4pRqiv7b1nHXZ%2Fprototyping-pages%3Fnode-id%3D0%253A1" allowfullscreen></iframe>
+            <br/>
             <p>
                  If you’d like to know more about my other work at GitHub, please contact me and let’s grab some coffee.
             </p>
