Update semantic nav

--- a/travel.html
+++ b/travel.html
@@ -93,12 +93,12 @@
             <div class="header">
                 <a href="/"><img alt="Zain Khoja logo" src="zk-logo.png" class="zk-logo"></a>
                 <h3 class="medium content-web">Zain Khoja</h3>
-                <div class="nav">
+                <nav class="nav">
                     <h5 class="option"><a href="/">Work</a></h5>
                     <h5 class="option"><a href="about">About</a></h5>
                     <h5 class="option selected">Travel</h5>
                     <h5 class="option"><a href="resume">Resume</a></h5>
-                </div>
+                </nav>
             </div>
 
             <!-- Title -->
