--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <!-- Nav -->
         <div class="hero">
             <div class="header">
-                <a href="/"><img alt="Zain Khoja logo" src="zk-logo.png" class="zk-logo"></a>
+                <a href="/"><img alt="Zain Khoja logo" src="zk-logo.svg" class="zk-logo"></a>
                 <h3 class="medium content-web">Zain Khoja</h3>
                 <div class="nav">
                     <h5 class="option selected">Work</h5>
@@ -102,7 +102,7 @@
             <!-- GitHub -->
             <a href="github"><div class="hvr-float exp exp-github">
                 <div class="exp-content">
-                    <img alt="GitHub logo" src="work/github/github-logo.png" class="github-logo">
+                    <img alt="GitHub logo" src="work/github/github-logo.svg" class="github-logo">
                     <h2 class="white">GitHub</h2>
                     <h5 class="medium white">Should designers code?</h5>
                 </div>
@@ -161,9 +161,9 @@
             <a href="respond"><div class="hvr-float exp exp-respond">
                 <div class="exp-content">
                     <div class="respond-logo-container">
-                        <img alt="iPhone outline" src="work/respond/respond-logo.png" class="hvr-float respond-logo">
-                        <img alt="iPhone outline" src="work/respond/respond-logo.png" class="hvr-float respond-logo">
-                        <img alt="iPhone outline" src="work/respond/respond-logo.png" class="hvr-float respond-logo">
+                        <img alt="iPhone outline" src="work/respond/respond-logo.svg" class="hvr-float respond-logo">
+                        <img alt="iPhone outline" src="work/respond/respond-logo.svg" class="hvr-float respond-logo">
+                        <img alt="iPhone outline" src="work/respond/respond-logo.svg" class="hvr-float respond-logo">
                     </div>
                     <h2>Respond</h2>
                     <h5 class="medium">Prioritizing situations for first responders.</h5>
@@ -173,7 +173,7 @@
             <!-- Tint -->
             <a href="tint"><div class="hvr-float exp exp-tint">
                 <div class="exp-content">
-                    <img alt="iPhone with photos" src="work/tint/tint-logo.png" class="tint-logo">
+                    <img alt="iPhone with photos" src="work/tint/tint-logo.svg" class="tint-logo">
                     <h2 class="white">Tint</h2>
                     <h5 class="medium white">Self-organizing photos with lots of background blurs.</h5>
                 </div>
@@ -182,7 +182,7 @@
             <!-- NALP -->
             <a href="nalp"><div class="hvr-float exp exp-nalp">
                 <div class="exp-content">
-                    <img alt="United States flag" src="work/nalp/nalp-logo.png" class="nalp-logo">
+                    <img alt="United States flag" src="work/nalp/nalp-logo.svg" class="nalp-logo">
                     <h2 class="white">NALP</h2>
                     <h5 class="medium white">Communication design around bipartisanship.</h5>
                 </div>
@@ -195,9 +195,9 @@
             <p>If you’re looking to work with me or want to grab some coffee, feel free to email me at <a href="mailto:znk4@cornell.edu?subject=Hey!" target="_blank" rel="noopener">znk4@cornell.edu</a>.</p>
         </div>
         <div class="social">
-            <a href="https://twitter.com/zainkho" target="_blank" rel="noopener"><img alt="Twitter icon" src="icons/twitter.png" class="icons"></a>
-            <a href="https://medium.com/@zainkho" target="_blank" rel="noopener"><img alt="Medium icon" src="icons/medium.png" class="icons"></a>
-            <a href="https://linkedin.com/in/zainkho" target="_blank" rel="noopener"><img alt="LinkedIn icon" src="icons/linkedin.png" class="icons"></a>
+            <a href="https://twitter.com/zainkho" target="_blank" rel="noopener"><img alt="Twitter icon" src="icons/twitter.svg" class="icons"></a>
+            <a href="https://medium.com/@zainkho" target="_blank" rel="noopener"><img alt="Medium icon" src="icons/medium.svg" class="icons"></a>
+            <a href="https://linkedin.com/in/zainkho" target="_blank" rel="noopener"><img alt="LinkedIn icon" src="icons/linkedin.svg" class="icons"></a>
         </div>
         
         <!-- Scroll To Top -->
