--- a/nalp.html
+++ b/nalp.html
@@ -91,14 +91,14 @@
         <!-- Nav -->
         <div class="hero">
             <div class="header">
-                <a href="/"><img alt="Zain Khoja logo" src="zk-logo.png" class="zk-logo"></a>
+                <a href="/"><img alt="Zain Khoja logo" src="zk-logo.svg" class="zk-logo"></a>
                 <h3 class="medium content-web">Zain Khoja</h3>
-                <div class="nav">
+                <nav class="nav">
                     <h5 class="option"><a href="/">Work</a></h5>
                     <h5 class="option"><a href="about">About</a></h5>
                     <h5 class="option"><a href="travel">Travel</a></h5>
                     <h5 class="option"><a href="resume">Resume</a></h5>
-                </div>
+                </nav>
             </div>
 
             <!-- Title -->
@@ -222,9 +222,9 @@
             <p>If you’re looking to work with me or want to grab some coffee, feel free to email me at <a href="mailto:znk4@cornell.edu?subject=Hey!" target="_blank" rel="noopener">znk4@cornell.edu</a>.</p>
         </div>
         <div class="social">
-            <a href="https://twitter.com/zainkho" target="_blank" rel="noopener"><img alt="Twitter icon" src="icons/twitter.png" class="icons"></a>
-            <a href="https://medium.com/@zainkho" target="_blank" rel="noopener"><img alt="Medium icon" src="icons/medium.png" class="icons"></a>
-            <a href="https://linkedin.com/in/zainkho" target="_blank" rel="noopener"><img alt="LinkedIn icon" src="icons/linkedin.png" class="icons"></a>
+            <a href="https://twitter.com/zainkho" target="_blank" rel="noopener"><img alt="Twitter icon" src="icons/twitter.svg" class="icons"></a>
+            <a href="https://medium.com/@zainkho" target="_blank" rel="noopener"><img alt="Medium icon" src="icons/medium.svg" class="icons"></a>
+            <a href="https://linkedin.com/in/zainkho" target="_blank" rel="noopener"><img alt="LinkedIn icon" src="icons/linkedin.svg" class="icons"></a>
         </div>  
         
         <!-- Back -->
