--- a/resume.html
+++ b/resume.html
@@ -135,35 +135,6 @@
         </div>
 
         <div class="section">
-            <h3><a href="https://www.github.com/" target="_blank" rel="noopener" class="link" style="color: #CB422A">xREZ Art + Science Lab</a></h3>
-            <p class="medium">Research Assistant · Aug 2017 to May 2018</p>
-            <br>
-            <p> 
-                Analyzed data from 52 participants to further explore the concept of presence in virtual reality. Co-authored paper in the Engineering Reality of Virtual Reality conference 2018. Read more at <a href="https://bit.ly/xREZVR" aria-label="From Being There To Feeling Real: The Effect Of Real World Expertise On Presence In Virtual Environments" target="_blank" rel="noopener" class="link">https://bit.ly/xREZVR</a>. 
-            </p>
-        </div>
-
-        <div class="section">
-            <h5 class="subtitle">Projects</h5>
-            <h3>Starbucks Sampler</h3>
-            <p class="medium">Jan 2019 to May 2019</p>
-            <br>
-            <p> 
-                Designed a feature allowing users to share modified favorites with friends and encouraging users to try new drinks.
-            </p>
-        </div>
-
-        <div class="section">
-            <h3>Respond</h3>
-            <p class="medium">September 2018</p>
-            <br>
-            <p> 
-                Designed a mobile app using machine learning to prioritize situations for first responders during natural disasters. Recognized by IBM’s Call for Code competition at HackMIT.
-            </p>
-        </div>
-
-        <div class="section">
-            <h5 class="subtitle">Activities</h5>
             <h3><a href="https://cornellappdev.com" target="_blank" rel="noopener" class="link cornell-link">Cornell AppDev</a></h3>
             <p class="medium">Product Designer · Jan 2019 to Present</p>
             <br>
@@ -173,11 +144,40 @@
         </div>
 
         <div class="section">
+            <h5 class="subtitle">Projects</h5>
+            <h3>Starbucks Sampler</h3>
+            <p class="medium">Jan 2019 to May 2019</p>
+            <br>
+            <p> 
+                Analyzed user needs and ideated a solution to encourage users to try new drinks. Designed and prototyped a feature encouraging users to try new drinks and share customized drinks with friends.
+            </p>
+        </div>
+
+        <div class="section">
+            <h3>Respond</h3>
+            <p class="medium">September 2018</p>
+            <br>
+            <p> 
+                Designed a mobile app using machine learning to prioritize situations for first responders during natural disasters. Recognized by Microsoft’s Azure team and IBM’s Call for Code competition for creating unique solutions to natural disasters.
+            </p>
+        </div>
+        
+        <div class="section">
+            <h5 class="subtitle">Activities</h5>
+            <h3><a href="http://www.xrezlab.com/" target="_blank" rel="noopener" class="link" style="color: #CB422A">xREZ Art + Science Lab</a></h3>
+            <p class="medium">Research Assistant · Aug 2017 to May 2018</p>
+            <br>
+            <p> 
+                Analyzed data from 52 participants to further explore the concept of presence in virtual reality. Co-authored paper in the Engineering Reality of Virtual Reality conference 2018. Read more at <a href="https://bit.ly/xREZVR" aria-label="From Being There To Feeling Real: The Effect Of Real World Expertise On Presence In Virtual Environments" target="_blank" rel="noopener" class="link">https://bit.ly/xREZVR</a>. 
+            </p>
+        </div>
+
+        <div class="section">
             <h3><a href="https://www.akfusa.org/" target="_blank" rel="noopener" class="link" style="color: #1C7C54">Aga Khan Foundation</a></h3>
             <p class="medium">University Ambassador · Sept 2016 to Present</p>
             <br>
             <p> 
-                Organized the annual Aga Khan Foundation Walk/Run, raising $1 million towards the alleviation of global poverty. Led the Innovative Solutions Challenge, inviting students to solve issues faced by local communities.
+                Organized the annual Aga Khan Foundation Walk/Run, raising $1 million towards the alleviation of global poverty. Co-founded the Innovative Solutions Challenge, inviting students to solve issues faced by local communities.
             </p>
         </div>
 
