--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <h1 class="content-mobile">🖋️</h1>
                     <h1>Yo, I'm Zain.</h1>
                     <h1 class="medium">
-                        Student at <a href="https://www.cornell.edu/" target="_blank" rel="noopener" class="link cornell-link">Cornell</a>, previously design at <a href="https://www.github.com/" target="_blank" rel="noopener" class="link github-link">GitHub</a>.
+                        Student at <a href="https://www.cornell.edu/" target="_blank" rel="noopener" class="link cornell-link">Cornell</a>, incoming design intern at <a href="https://www.instagram.com/" target="_blank" rel="noopener" class="link ig-title">Instagram</a>.
                     </h1>
                 </div>
             </div>
@@ -112,9 +112,9 @@
             <a href="starbucks"><div class="hvr-float exp exp-starbucks">
                 <div class="exp-content">
                     <div class="starbucks-heat-container">
-                        <div class="starbucks-heat evaporate"></div>
-                        <div class="starbucks-heat evaporate"></div>
-                        <div class="starbucks-heat evaporate"></div>
+                        <div class="starbucks-heat evaporate-1"></div>
+                        <div class="starbucks-heat evaporate-2"></div>
+                        <div class="starbucks-heat evaporate-3"></div>
                     </div>
                     <img alt="coffee cup" src="work/starbucks/starbucks-logo.png" class="starbucks-logo">
                     <h2 class="white">Starbucks</h2>
