--- a/travel.html
+++ b/travel.html
@@ -258,7 +258,7 @@
 
         <!-- Sydney -->
         <div class="section">
-            <h2 class="city city-sydney">Sydney, <span class="medium">Austrailia</span></h2>
+            <h2 class="city city-sydney">Sydney, <span class="medium">Australia</span></h2>
             <div class="scroll">
                 <img alt="The Domain, Sydney, Austrailia" src="work/travel/sydney1.jpg" class="photo">
                 <img alt="Chinatown, Haymarket, Austrailia" src="work/travel/sydney2.jpg" class="photo">
