--- a/about.html
+++ b/about.html
@@ -116,7 +116,7 @@
     <main class="c12 summary main">
         <div>
 
-            <p>I’m currently a student at <a href="https://www.cornell.edu/" target="_blank" rel="noopener" class="link cornell-link">Cornell University</a> studying Information Science. This upcoming summer, I’ll be a Product Design Intern at <a href="https://instagram.com" target="_blank" rel="noopener" class="link ig-link">Instagram</a>. Most recently, I was a <a href="https://primer.style/team" target="_blank" rel="noopener" style="color: #0366D6" class="link">Systems Design Intern</a> at <a href="https://www.github.com/" target="_blank" rel="noopener" class="link github-link">GitHub</a>.</p><br>
+            <p>I’m currently a student at <a href="https://www.cornell.edu/" target="_blank" rel="noopener" class="link cornell-link">Cornell University</a> studying Information Science. Most recently, I was a <a href="https://primer.style/team" target="_blank" rel="noopener" style="color: #0366D6" class="link">Systems Design Intern</a> at <a href="https://www.github.com/" target="_blank" rel="noopener" class="link github-link">GitHub</a>. This upcoming summer, I’ll be a Product Design Intern at <a href="https://instagram.com" target="_blank" rel="noopener" class="link ig-link">Instagram</a>.</p><br>
 
             <p>I was born and raised in Dallas, TX, where I developed a strong interest in the way technology affects behavior in society as well as a love for sweet tea. I'm easily inspired by people from unique places and my own experiences outside of work.</p><br>
 
