--- a/starbucks.html
+++ b/starbucks.html
@@ -134,7 +134,7 @@
                     <p>January 2019 to May 2019</p>
                 </div>
             </div>
-            <video autoplay loop muted playsinline alt="Starbucks prototyping video" src="work/starbucks/starbucks-summary.mp4" class="summary-section"></video>
+            <video autoplay loop muted playsinline alt="Starbucks summary video" src="work/starbucks/starbucks-summary.mp4" class="summary-section"></video>
         </div>
     </div>
 
@@ -227,6 +227,7 @@
             <p>
                 Talking to users, I was pleasantly surprised by how many times I heard, “I don’t have any problems, I love the app.” Starbucks has done a great job of helping users to order their favorite drinks. I hope Friend Activity can further this by helping users find new drinks to love and find new connections with friends.
             </p>
+            <br>
             <p>
                 There are a lot more decisions and detail that went into this project than I mentioned here. If you’d like to read more, check out the <a href="https://blog.prototypr.io/starbucks-for-people-not-machines-92e6651c2af7" target="_blank" rel="noopener" class="link starbucks-link">Medium article</a>.
             </p>
