Update tagline and bio

--- a/about.html
+++ b/about.html
@@ -106,7 +106,7 @@
                 <h1 class="content-web emoji">👋🏽</h1>
                 <div>
                     <h1 class="content-mobile">👋🏽</h1>
-                    <h1>Hi there,</h1>
+                    <h1>Hey there,</h1>
                     <h1 class="medium">It's nice to meet you.</h1>
                 </div>
             </div>
@@ -116,11 +116,15 @@
     <main class="c12 summary main">
         <div>
 
-            <p>I’m currently a student at <a href="https://www.cornell.edu/" target="_blank" rel="noopener" class="link cornell-link">Cornell University</a> studying Information Science. Most recently, I was a <a href="https://primer.style/team" target="_blank" rel="noopener" style="color: #0366D6" class="link">Systems Design Intern</a> at <a href="https://www.github.com/" target="_blank" rel="noopener" class="link github-link">GitHub</a>. This upcoming summer, I’ll be a Product Design Intern at <a href="https://instagram.com" target="_blank" rel="noopener" class="link ig-link">Instagram</a>.</p><br>
-
-            <p>I was born and raised in Dallas, TX, where I developed a strong interest in the way technology affects behavior in society as well as a love for sweet tea. I'm easily inspired by people from unique places and my own experiences outside of work.</p><br>
-
-            <p>If you’d like to chat or challenge me to a friendly game of table tennis, <a href="http://m.me/zainkho7" target="_blank" rel="noopener">let me know</a>!</p>
+            <p>
+                I’m currently a student at <a href="https://www.cornell.edu/" target="_blank" rel="noopener" class="link cornell-link">Cornell</a> and a Design Partner at <a href="https://www.dormroomfund.com/" target="_blank" rel="noopener" class="link drf-link">Dorm Room Fund</a>. Most recently, I was a Systems Design Intern at <a href="https://www.github.com/" target="_blank" rel="noopener" class="link github-link">GitHub</a>.
+            </p><br>
+            <p>
+                I learned my craft by working on <a href="https://unicreative.co" target="_blank" rel="noopener" class="link">side projects</a> and guidance from some <a href="https://sahkho.com" target="_blank" rel="noopener" class="link">great mentors</a>. I also work with <a href="https://cornellappdev.com" target="_blank" rel="noopener" class="link">Cornell AppDev</a> to improve the quality of life for students on campus.
+            </p><br>
+            <p>
+                A proud Dallas native and sweet tea aficionado, I'm inspired by people from different walks of life and my own experiences exploring the unknown.
+            </p>
         </div>
         <img alt="picture of Zain Khoja" src="zk-avi.jpg" class="avi">
     </main>
