--- a/index.html
+++ b/index.html
@@ -88,10 +88,8 @@
                 <h1 class="content-web emoji">🖋️</h1>
                 <div>
                     <h1 class="content-mobile">🖋️</h1>
-                    <h1>Yo, I'm Zain.</h1>
-                    <h1 class="medium">
-                        Student at <a href="https://www.cornell.edu/" target="_blank" rel="noopener" class="link cornell-link">Cornell</a>, incoming design intern at <a href="https://www.instagram.com/" target="_blank" rel="noopener" class="link ig-title">Instagram</a>.
-                    </h1>
+                    <h1>Hello, I'm Zain.</h1>
+                    <h1 class="medium">Creating joy <a href="https://www.cornell.edu/" target="_blank" rel="noopener" class="link cornell-link">@Cornell</a>, <a href="https://www.dormroomfund.com/" target="_blank" rel="noopener" class="link drf-link">@DRF</a>.</h1>
                 </div>
             </div>
         </div>
