--- a/about.html
+++ b/about.html
@@ -120,7 +120,7 @@
                 I’m currently a student at <a href="https://www.cornell.edu/" target="_blank" rel="noopener" class="link cornell-link">Cornell</a> and a Design Partner at <a href="https://www.dormroomfund.com/" target="_blank" rel="noopener" class="link drf-link">Dorm Room Fund</a>. Most recently, I was a Systems Design Intern at <a href="https://www.github.com/" target="_blank" rel="noopener" class="link github-link">GitHub</a>.
             </p><br>
             <p>
-                I learned my craft by working on <a href="https://unicreative.co" target="_blank" rel="noopener" class="link">side projects</a> and guidance from some <a href="https://sahkho.com" target="_blank" rel="noopener" class="link">great mentors</a>. I also work with <a href="https://cornellappdev.com" target="_blank" rel="noopener" class="link">Cornell AppDev</a> to improve the quality of life for students on campus.
+                I learned my craft by working on <a href="http://unicreative.co/" target="_blank" rel="noopener" class="link">side projects</a> and guidance from some <a href="https://twitter.com/sahkho" target="_blank" rel="noopener" class="link">great mentors</a>. I also work with <a href="https://cornellappdev.com" target="_blank" rel="noopener" class="link">Cornell AppDev</a> to improve the quality of life for students on campus.
             </p><br>
             <p>
                 A proud Dallas native and sweet tea aficionado, I'm inspired by people from different walks of life and my own experiences exploring the unknown.
