--- a/about.html
+++ b/about.html
@@ -115,9 +115,8 @@
     
     <main class="c12 summary main">
         <div>
-
             <p>
-                I’m currently a student at <a href="https://www.cornell.edu/" target="_blank" rel="noopener" class="link cornell-link">Cornell</a> and a Design Partner at <a href="https://www.dormroomfund.com/" target="_blank" rel="noopener" class="link drf-link">Dorm Room Fund</a>. Most recently, I was a Systems Design Intern at <a href="https://www.github.com/" target="_blank" rel="noopener" class="link github-link">GitHub</a>.
+                I’m currently a student at <a href="https://www.cornell.edu/" target="_blank" rel="noopener" class="link cornell-link">Cornell</a> studying Information Science. Most recently, I was a Systems Designer Intern at <a href="https://primer.style/team" target="_blank" rel="noopener" style="color: #0366D6" class="link">GitHub</a>. This upcoming summer, I’ll be a Product Design Intern at <a href="https://instagram.com" target="_blank" rel="noopener" class="link ig-link">Instagram</a>.
             </p><br>
             <p>
                 I learned my craft by working on <a href="http://unicreative.co/" target="_blank" rel="noopener" class="link">side projects</a> and guidance from some <a href="https://twitter.com/sahkho" target="_blank" rel="noopener" class="link">great mentors</a>. I also work with <a href="https://cornellappdev.com" target="_blank" rel="noopener" class="link">Cornell AppDev</a> to improve the quality of life for students on campus.
