Update meta description

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <head id="top">
     <meta charset="UTF-8">
     <title>Zain Khoja</title>
-    <meta name="Description" content="Zain Khoja is a designer and student at Cornell. He's currently a Design Systems Intern at GitHub.">
+    <meta name="description" content="Zain Khoja is a designer, student, and strong advocate for sweet tea at Cornell.">
 
     <!-- Viewport -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
