--- a/resume.html
+++ b/resume.html
@@ -125,6 +125,15 @@
 
         <div class="section">
             <h5 class="subtitle">Experience</h5>
+            <h3><a href="https://www.instagram.com/" target="_blank" rel="noopener" class="link ig-link">Instagram</a></h3>
+            <p class="medium">Product Design Intern · June 2020 to Aug 2020</p>
+            <br>
+            <p>
+                Designed creative tools for Instagram Reels to help creators tell great stories. Developed prototypes in Origami to conduct usability testing and handoff.
+            </p>
+        </div>
+        
+        <div class="section">
             <h3><a href="https://www.github.com/" target="_blank" rel="noopener" class="link github-link">GitHub</a></h3>
             <p class="medium">Design Systems Intern · June 2019 to Aug 2019</p>
             <br>
@@ -139,15 +148,6 @@
             <br>
             <p>
                 Taught over 60 students industry-standard product thinking, interaction design, and visual design to cultivate design education and community. Designed apps to help over 5000 students find places to eat and stay healthy daily.
-            </p>
-        </div>
-        
-        <div class="section">
-            <h3><a href="https://www.ideocolab.com/" target="_blank" rel="noopener" class="link ideo-link">IDEO CoLab Makeathon</a></h3>
-            <p class="medium">Product Designer · Oct 2018</p>
-            <br>
-            <p>
-                Designed a digital and physical experience solution to help patients keep in touch with loved ones over long distances.
             </p>
         </div>
 
