--- a/index.html
+++ b/index.html
@@ -96,6 +96,17 @@
 
     <main class="c12 content">
 
+            <!-- Instagram -->
+<!--            <a href="">-->
+                <div class="hvr-float exp exp-ig">
+                <div class="exp-content">
+                    <img alt="Instagram" src="work/instagram/ig-logo.svg" class="ig-logo">
+                    <h2 class="white">Instagram</h2>
+                    <h5 class="medium white">A reel-y cool product.</h5>
+                </div>
+            </div>
+<!--            </a>-->
+        
             <!-- GitHub -->
             <a href="github"><div class="hvr-float exp exp-github">
                 <div class="exp-content">
@@ -173,15 +184,6 @@
                     <img alt="iPhone with photos" src="work/tint/tint-logo.svg" class="tint-logo">
                     <h2 class="white">Tint</h2>
                     <h5 class="medium white">Self-organizing photos with lots of background blurs.</h5>
-                </div>
-            </div></a>
-
-            <!-- NALP -->
-            <a href="nalp"><div class="hvr-float exp exp-nalp">
-                <div class="exp-content">
-                    <img alt="United States flag" src="work/nalp/nalp-logo.svg" class="nalp-logo">
-                    <h2 class="white">NALP</h2>
-                    <h5 class="medium white">Communication design around bipartisanship.</h5>
                 </div>
             </div></a>
 
