Made some QOL improvements on mobile and corrected some content inconsistencies

--- a/starbucks.html
+++ b/starbucks.html
@@ -222,7 +222,7 @@
 
         <div class="section">
             <h5 class="subtitle">Results & Metrics</h5>
-            <h2 class="starbucks-title">See it yourself</h2>
+            <h2 class="starbucks-title">A familiar cup of joe.</h2>
             <p>
                 Talking to users, I was pleasantly surprised by how many times I heard, “I don’t have any problems, I love the app.” Starbucks has done a great job of helping users to order their favorite drinks. I hope Friend Activity can further this by helping users find new drinks to love and find new connections with friends.
             </p>
