--- a/github.html
+++ b/github.html
@@ -148,7 +148,7 @@
                     <p>June 2019 to August 2019</p>
                 </div>
             </div>
-            <img alt="GitHub prototyping pages" src="work/github/github-summary.png" class="summary-section">
+            <img alt="GitHub prototyping pages" src="work/github/github-summary.png" class="img summary-section">
         </div>
     </div>
 
@@ -185,7 +185,7 @@
 
         <div class="section">
             <h5 class="subtitle"></h5>
-            <h2 class="github-title">Our north star</h2>
+            <h2 class="github-title">Our north star.</h2>
             <p>
                 There's not been a consistent set of tools to explicitly state that a design is in it's beginning/rough stages. Designers often end up using our high fidelity components or finding different ways to make the UI look less ‘polished’ or final. We wanted a solution that would:
             </p>
@@ -200,7 +200,7 @@
 
         <div class="section">
             <h5 class="subtitle">Ideation</h5>
-            <h2 class="github-title">Creating classification</h2>
+            <h2 class="github-title">Creating classification.</h2>
             <p>
                 The driving statement that pushed forward our ideation was that <strong>structure should be complemented with flexibility</strong>. In order to accomplish this, we came up with two different types of elements.
             </p>
@@ -217,7 +217,7 @@
 
         <div class="section">
             <h5 class="subtitle"></h5>
-            <h2 class="github-title">Getting feedback</h2>
+            <h2 class="github-title">Getting feedback.</h2>
             <p>
                 After creating our initial prototyping pages, we asked the Product Design team for feedback on what would help them the most. We received some very valuable feedback that helped us improve the pages to a point where they could be most effectively used.
             </p>
@@ -226,12 +226,12 @@
 
         <div class="section">
             <h5 class="subtitle">Results & Metrics</h5>
-            <h2 class="github-title">See it yourself</h2>
+            <h2 class="github-title">See it yourself.</h2>
             <p>
                 The prototyping pages were a great experience in learning the workflow and asynchronous communication used within GitHub’s design team. You can check out the file below:
             </p>
             <br/>
-            <iframe style="border: none;" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FRfvQDIm4H4pRqiv7b1nHXZ%2Fprototyping-pages%3Fnode-id%3D0%253A1" allowfullscreen></iframe>
+            <iframe class="img" style="border: none;" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FRfvQDIm4H4pRqiv7b1nHXZ%2Fprototyping-pages%3Fnode-id%3D0%253A1" allowfullscreen></iframe>
             <br/>
             <p>
                  If you’d like to know more about my other work at GitHub, please contact me and let’s grab some coffee.
