--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <div>
                     <h1 class="content-mobile">🖋️</h1>
                     <h1>Hello, I'm Zain.</h1>
-                    <h1 class="medium">Creating joy <a href="https://www.cornell.edu/" target="_blank" rel="noopener" class="link cornell-link">@Cornell</a>, <a href="https://www.instagram.com/" target="_blank" rel="noopener" class="link ig-title">@Insta</a>.</h1>
+                    <h1 class="medium">Creating joy <a href="https://www.cornell.edu/" target="_blank" rel="noopener" class="link cornell-link">@Cornell</a><!--, <a href="https://www.instagram.com/" target="_blank" rel="noopener" class="link ig-title">@Insta</a>-->.</h1>
                 </div>
             </div>
         </div>
