Removed Tint and added PatchRx placeholder

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <div>
                     <h1 class="content-mobile">🖋️</h1>
                     <h1>Hello, I'm Zain.</h1>
-                    <h1 class="medium">Creating joy <a href="https://www.cornell.edu/" target="_blank" rel="noopener" class="link cornell-link">@Cornell</a><!--, <a href="https://www.instagram.com/" target="_blank" rel="noopener" class="link ig-title">@Insta</a>-->.</h1>
+                    <h1 class="medium">Creating joy <a href="https://www.cornell.edu/" target="_blank" rel="noopener" class="link cornell-link">@Cornell</a>, <a href="https://www.instagram.com/" target="_blank" rel="noopener" class="link ig-title">@Insta</a>.</h1>
                 </div>
             </div>
         </div>
@@ -103,6 +103,17 @@
                     <img alt="Instagram" src="work/instagram/ig-logo.svg" class="ig-logo">
                     <h2 class="white">Instagram</h2>
                     <h5 class="medium white">A reel-y cool product (under NDA).</h5>
+                </div>
+            </div>
+<!--            </a>-->
+        
+            <!-- PatchRx -->
+<!--            <a href="">-->
+                <div class="hvr-float exp exp-patch">
+                <div class="exp-content">
+                    <img alt="PatchRx" src="work/patch/patch-logo.svg" class="patch-logo">
+                    <h2>PatchRx</h2>
+                    <h5 class="medium">Taking your medication with joy (coming soon).</h5>
                 </div>
             </div>
 <!--            </a>-->
@@ -175,15 +186,6 @@
                     </div>
                     <h2>Respond</h2>
                     <h5 class="medium">Prioritizing situations for first responders.</h5>
-                </div>
-            </div></a>
-
-            <!-- Tint -->
-            <a href="tint"><div class="hvr-float exp exp-tint">
-                <div class="exp-content">
-                    <img alt="iPhone with photos" src="work/tint/tint-logo.svg" class="tint-logo">
-                    <h2 class="white">Tint</h2>
-                    <h5 class="medium white">Self-organizing photos with lots of background blurs.</h5>
                 </div>
             </div></a>
 
