Update AppDev item on resume

--- a/resume.html
+++ b/resume.html
@@ -164,10 +164,10 @@
         <div class="section">
             <h5 class="subtitle">Activities</h5>
             <h3><a href="https://cornellappdev.com" target="_blank" rel="noopener" class="link">Cornell AppDev</a></h3>
-            <p class="medium">Product Designer · Jan 2019 to Present</p>
+            <p class="medium">President · Jan 2021 to Present</p>
             <br>
             <p>
-                Taught over 60 students industry-standard product thinking, interaction design, and visual design to cultivate design education and community. Designed apps to help over 5000 students find places to eat and stay healthy daily.
+                Led a team of over 50 engineers, designers, and marketers to develop apps for over 10k daily active students and members of the Ithaca community. Oversaw 4 introductory, application-based courses with over 300 students per semester.
             </p>
         </div>
         
